--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-coffeelint": "0.0.7",
-    "grunt-release": "~0.5.1"
+    "grunt-release": "~0.5.1",
+    "chai": "~1.7.2",
+    "mocha": "~1.12.0",
+    "grunt-mocha-test": "~0.6.3",
+    "sinon": "~1.7.3"
   }
 }
