--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "chai": "~1.7.2",
     "mocha": "~1.12.0",
     "grunt-mocha-test": "~0.6.3",
-    "sinon": "~1.7.3"
+    "sinon": "~1.7.3",
+    "stylus": "~0.36.1",
+    "haml-coffee": "~1.11.4",
+    "nib": "~1.0.0"
   }
 }
