--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "grunt",
     "bower"
   ],
-  "version": "1.0.0-alpha.12",
+  "version": "1.0.0-alpha.13",
   "author": "Boris Staal <boris@staal.io>",
   "homepage": "https://github.com/inossidabile/grill",
   "main": "./lib/grill",
@@ -15,23 +15,25 @@
     "type": "git",
     "url": "git://github.com/inossidabile/grill.git"
   },
+  "scripts": {
+    "test": "grunt mochaTest"
+  },
   "engines": {
     "node": ">=0.8.0"
   },
   "dependencies": {
-    "bower": "~1.1.0",
     "coffee-script": "~1.6.3",
     "sugar": "~1.3.8",
-    "commander": "~1.2.0",
-    "grunt": "~0.4.1",
+
+    "bower": "~1.2.1",
     "mincer": ">= 0.5.5",
     "express": "~3.3.5",
     "proxy-middleware": "~0.4.0",
     "gzippo": "~0.2.0",
-    "grunt-contrib-testem": ">=0.2.0",
-    "haml-coffee": "~1.11.1",
-    "stylus": "~0.32.1",
-    "nib": "~0.9.1"
+    "grunt-contrib-testem": ">=0.3.0",
+
+    "grunt": "~0.4.1",
+    "commander": "~1.2.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
